Add info about Sml1 and Sml3 to change log and manifest

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -9,4 +9,5 @@
 * Test release of new MemManager
 * New patcher with support for MM patching and build version logging and display
 * Complex collisions for trees and some dynamic objects
+* New enemy Sml1, Sml3 HD cars in remaster HD vehicles option
 * Start of the build version change log journal
